// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.service;

option java_multiple_files = true;

import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_detail.proto";

service EntityReferenceService {
  rpc getReferences(EntityReferenceRequest) returns (EntityReferenceResponse);
}

message EntityReferenceRequest {
  string yaml = 1;  // yaml construct that pms understands
  string accountIdentifier = 2;
  string orgIdentifier = 3;
  string projectIdentifier = 4;
  bytes gitSyncBranchContext = 5;
}

message EntityReferenceResponse {
  repeated io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO referredEntities = 1;
}
